--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "The Verge - Is It A Thing",
+    "name": "__MSG_appName__",
     "version": "1.1.1",
     "manifest_version": 2,
-    "description": "I have no idea if that's a sex thing",
+    "description": "__MSG_appDesc__",
     "homepage_url": "http://twitter.com/mehedih_",
     "icons": {
         "16": "icons/icon16.png",
