--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
     "name": "__MSG_appName__",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "manifest_version": 2,
     "description": "__MSG_appDesc__",
     "homepage_url": "http://twitter.com/mehedih_",
     "icons": {
         "16": "icons/icon16.png",
+		"19": "icons/icon19.png",
         "48": "icons/icon48.png",
         "128": "icons/icon128.png"
     },
